--- a/OnovaStore/Areas/Manage/Views/Manager/Brands.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Manager/Brands.cshtml
@@ -1,14 +1,15 @@
-﻿@{
-    ViewData["Title"] = "List of Product";
+﻿
+@{
+    ViewData["Title"] = "List of Brand";
     Layout = "_Layout";
 }
 
 <div class="g-pa-20">
-<h3 class="g-font-weight-300 g-font-size-22 g-color-black g-mb-30"><a style="text-decoration:none" href="@Url.Action("AddProduct", "Manager", new {Area = "Manage"})">Add new product</a></h3>
+    <h3 class="g-font-weight-300 g-font-size-22 g-color-black g-mb-30"><a style="text-decoration:none" href="@Url.Action("AddBrand", "Manager", new {Area = "Manage"})">Add new brand</a></h3>
 
     <div class="media-md align-items-center g-mb-30">
         <div class="d-flex g-mb-15 g-mb-0--md">
-            <h3 class="g-font-weight-400 g-font-size-16 g-color-black mb-0">Complex Table</h3>
+            <h3 class="g-font-weight-400 g-font-size-16 g-color-black mb-0">Brands</h3>
         </div>
         <div class="media d-md-flex align-items-center ml-auto">
             <div class="d-flex align-items-center">
@@ -59,36 +60,6 @@
                         </th>
                         <th>
                             <div class="media">
-                                <div class="d-flex align-self-center">Product Name</div>
-                                <div class="d-flex align-self-center ml-auto">
-                                    <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
-                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
-                                            <i class="hs-admin-angle-up"></i>
-                                        </a>
-                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
-                                            <i class="hs-admin-angle-down"></i>
-                                        </a>
-                                    </span>
-                                </div>
-                            </div>
-                        </th>
-                        <th>
-                            <div class="media">
-                                <div class="d-flex align-self-center">Status</div>
-                                <div class="d-flex align-self-center ml-auto">
-                                    <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
-                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
-                                            <i class="hs-admin-angle-up"></i>
-                                        </a>
-                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
-                                            <i class="hs-admin-angle-down"></i>
-                                        </a>
-                                    </span>
-                                </div>
-                            </div>
-                        </th>
-                        <th>
-                            <div class="media">
                                 <div class="d-flex align-self-center">Brand Name</div>
                                 <div class="d-flex align-self-center ml-auto">
                                     <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
@@ -104,7 +75,37 @@
                         </th>
                         <th>
                             <div class="media">
-                                <div class="d-flex align-self-center">Category Name</div>
+                                <div class="d-flex align-self-center">Total Products</div>
+                                <div class="d-flex align-self-center ml-auto">
+                                    <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
+                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
+                                            <i class="hs-admin-angle-up"></i>
+                                        </a>
+                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
+                                            <i class="hs-admin-angle-down"></i>
+                                        </a>
+                                    </span>
+                                </div>
+                            </div>
+                        </th>
+                        <th>
+                            <div class="media">
+                                <div class="d-flex align-self-center">Total Sales</div>
+                                <div class="d-flex align-self-center ml-auto">
+                                    <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
+                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
+                                            <i class="hs-admin-angle-up"></i>
+                                        </a>
+                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
+                                            <i class="hs-admin-angle-down"></i>
+                                        </a>
+                                    </span>
+                                </div>
+                            </div>
+                        </th>
+                        <th>
+                            <div class="media">
+                                <div class="d-flex align-self-center">Contact Email</div>
                                 <div class="d-flex align-self-center ml-auto">
                                     <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
                                         <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
@@ -120,21 +121,6 @@
                         <th>
                             <div class="media">
                                 <div class="d-flex align-self-center g-nowrap">Rates</div>
-                                <div class="d-flex align-self-center ml-auto">
-                                    <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
-                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
-                                            <i class="hs-admin-angle-up"></i>
-                                        </a>
-                                        <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
-                                            <i class="hs-admin-angle-down"></i>
-                                        </a>
-                                    </span>
-                                </div>
-                            </div>
-                        </th>
-                        <th>
-                            <div class="media">
-                                <div class="d-flex align-self-center g-nowrap">Total Sales</div>
                                 <div class="d-flex align-self-center ml-auto">
                                     <span class="d-inline-block g-width-10 g-line-height-1 g-font-size-10">
                                         <a class="g-color-gray-light-v6 g-color-lightblue-v3--hover g-text-underline--none--hover" href="#!">
@@ -169,7 +155,6 @@
                                 <div class="progress-bar g-bg-lightbrown g-rounded-3" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </td>
-                        <td>300000</td>
                         <td class="text-right">
                             <div class="g-pos-rel g-top-3 d-inline-block">
                                 <a id="dropDown1Invoker" class="u-link-v5 g-line-height-0 g-font-size-24 g-color-gray-light-v6 g-color-lightblue-v3--hover" href="#!" aria-controls="dropDown1" aria-haspopup="true" aria-expanded="false" data-dropdown-event="click" data-dropdown-target="#dropDown1">
@@ -230,7 +215,6 @@
                                 <div class="progress-bar g-bg-lightblue-v3 g-rounded-3" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </td>
-                        <td>300000</td>
                         <td class="text-right">
                             <div class="g-pos-rel g-top-3 d-inline-block">
                                 <a id="dropDown2Invoker" class="u-link-v5 g-line-height-0 g-font-size-24 g-color-gray-light-v6 g-color-lightblue-v3--hover" href="#!" aria-controls="dropDown2" aria-haspopup="true" aria-expanded="false" data-dropdown-event="click" data-dropdown-target="#dropDown2">
