--- a/OnovaStore/Areas/Manage/Views/Shared/_Sidebar.cshtml
+++ b/OnovaStore/Areas/Manage/Views/Shared/_Sidebar.cshtml
@@ -79,6 +79,13 @@
                         </span>
                         <span class="media-body align-self-center">Categories</span>
                     </a>
+                
+                    <a class="media u-side-nav--top-level-menu-link u-side-nav--hide-on-hidden g-px-15 g-py-12 @(pageName == "manager" && viewName == "promotions" ? "active" : "")" href="@Url.Action("Promotions", "Manager", new {area = "Manage"})">
+                        <span class="d-flex align-self-center g-pos-rel g-font-size-18 g-mr-18">
+                            <i class="hs-admin-gift"></i>
+                        </span>
+                        <span class="media-body align-self-center">Promotions</span>
+                    </a>
                 }
             </li>
         </ul>
